--- a/front/register/register.css
+++ b/front/register/register.css
@@ -47,12 +47,12 @@ h1{
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
 }
-#signup  input[type="email"],#signup  input[type="number"]:focus, #signup  input[type="password"], #signin button[type="submit"]{
+#signup  input[type="email"],#signup  input[type="number"], #signup  input[type="password"], #signin button[type="submit"]{
  background: rgb(28, 30, 33);
  box-shadow: inset -100px -100px 0 rgb(28, 30, 33); /*Prevent yellow autofill color*/
  color: rgb(52, 56, 61);
 }
-#signup  input[type="email"], #signup  input[type="number"]:focus,#signup  input[type="password"]{
+#signup  input[type="email"], #signup input[type="number"], #signup  input[type="password"]{
  position: relative;
  display: block;
  width: 280px;
@@ -63,7 +63,7 @@ h1{
  padding: 0 0 0 20px;
  font-weight: 700;
 }
-#signup  input[type="email"]:focus, #signup  input[type="number"]:focus,#signup  input[type="password"]:focus{
+#signup  input[type="email"]:focus, #signup  input[type="number"],#signup  input[type="password"]:focus{
  color: rgb(255, 255, 255);
 }
 #signup button[type="submit"]{
