--- a/front/main/main.css
+++ b/front/main/main.css
@@ -220,7 +220,6 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
-
 header{
 display: flex;
     flex-direction: row;
@@ -240,4 +239,56 @@ margin-top: 15px;
 margin-left: 15px;
 height: 80px;
 width: 100px;
+}
+
+.btn button{
+    font-family: 'Roboto', sans-serif;
+    background-color: rgb(52, 56, 61);
+    display: inline-block;
+    padding: 10px 15px;
+    color: #fff;
+    cursor: pointer;
+    transition: 300ms;
+    border-radius: 25px;
+    border: 1px ,solid, rgb(52, 56, 61);
+}
+
+
+.btn button:hover{
+    background-color: #0088cc;
+}
+
+.btn2 button{
+    font-family: 'Roboto', sans-serif;
+    background-color: rgb(52, 56, 61);
+    display: inline-block;
+    padding: 10px 15px;
+    color: #fff;
+    cursor: pointer;
+    transition: 300ms;
+    border-radius: 25px;
+    border: 1.8px ,solid, white;
+}
+
+.btn2 button:hover{
+    background-color: white;
+    color: #000;
+}
+
+.btn3 button{
+    font-family: 'Roboto', sans-serif;
+    background-color: white;
+    display: inline-block;
+    padding: 10px 15px;
+    color: #000;
+    cursor: pointer;
+    transition: 300ms;
+    border-radius: 25px;
+    border: 1.8px ,solid, black;
+}
+
+.btn3 button:hover{
+    background-color: rgb(52, 56, 61);
+    color: #fff;
+    border: 1.8px ,solid, white;
 }
