тут чето не то с регом

--- a/front/main/norma.css
+++ b/front/main/norma.css
@@ -1,99 +1,4 @@
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-body{
-    background: rgb(52, 56, 61);
-    font-family: 'Roboto', sans-serif;
-}
-
-header{
-display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: transparent;
-    color: #fff;
-}
-h1{
- color: rgb(255, 255, 255);
- margin: 20px auto 0;
- width: 200px;
- text-align: center;
-}
-
-img{
-margin-top: 15px;
-margin-left: 15px;
-height: 80px;
-width: 100px;
-}
-
-.btn button{
-    font-family: 'Roboto', sans-serif;
-    background-color: rgb(52, 56, 61);
-    display: inline-block;
-    padding: 10px 15px;
-    color: #fff;
-    cursor: pointer;
-    transition: 300ms;
-    border-radius: 25px;
-    border: 1px ,solid, rgb(52, 56, 61);
-    margin-left: 25px;
-    margin-top: 10px;
-}
-
-
-.btn button:hover{
-    background-color: #0088cc;
-}
-
-
-
-.button-log {
-  font-family: 'Roboto', sans-serif;
-  background-color: rgb(52, 56, 61);
-  display: inline-block;
-  padding: 10px 15px;
-  color: #fff;
-  cursor: pointer;
-  transition: 300ms;
-  border-radius: 25px;
-  border: 1.8px ,solid, white;
-  margin-left: 25px;
-  margin-top: 10px;
-  text-decoration : none;
-}
-
-.button-log:hover{
-    background-color: white;
-    color: #000;
-}
-
-.button-reg {
-  font-family: 'Roboto', sans-serif;
-  background-color: white;
-  display: inline-block;
-  padding: 10px 15px;
-  color: #000;
-  cursor: pointer;
-  transition: 300ms;
-  border-radius: 25px;
-  border: 1.8px ,solid, black;
-  margin-left: 25px;
-  margin-top: 10px;
-  text-decoration : none;
-}
-
-.button-reg:hover{
-     background-color: rgb(52, 56, 61);
-     color: #fff;
-     border: 1.8px ,solid, white;
-}
+/**
   Нормализация блочной модели
  */
 *,
