--- a/front/main/main.css
+++ b/front/main/main.css
@@ -1,8 +1,18 @@
 
+
+
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto.woff2') format('woff2');
     font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Robotobold';
+    src: url('../fonts/Robotobold.woff2') format('woff2');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
@@ -12,88 +22,43 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
-header{
-display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: transparent;
-    color: #fff;
-}
-h1{
- color: rgb(255, 255, 255);
- margin: 20px auto 0;
- width: 200px;
- text-align: center;
-}
-
-img{
-margin-top: 15px;
-margin-left: 15px;
-height: 80px;
-width: 100px;
-}
-
-.btn button{
-    font-family: 'Roboto', sans-serif;
+.about{
     background-color: rgb(52, 56, 61);
-    display: inline-block;
-    padding: 10px 15px;
+}
+
+.about h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+}
+
+.about strong{
+    font-family: 'Robotobold', sans-serif;';
+    font-weight: 600;
+}
+
+.about p{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+.about_h1{
+    text-align:justify;
+    padding: 10px 105px;
+    font-size: 27px;
+    color: #fff
+}
+
+.about{
     color: #fff;
-    cursor: pointer;
-    transition: 300ms;
-    border-radius: 25px;
-    border: 1px ,solid, rgb(52, 56, 61);
-    margin-left: 25px;
-    margin-top: 10px;
+}
+.about h2{
+    margin: 0px 0px
 }
 
-
-.btn button:hover{
-    background-color: #0088cc;
+.about b{
+    font-size: 20px
 }
-
-
-
-.button-log {
-  font-family: 'Roboto', sans-serif;
-  background-color: rgb(52, 56, 61);
-  display: inline-block;
-  padding: 10px 15px;
-  color: #fff;
-  cursor: pointer;
-  transition: 300ms;
-  border-radius: 25px;
-  border: 1.8px ,solid, white;
-  margin-left: 25px;
-  margin-top: 10px;
-  text-decoration : none;
-}
-
-.button-log:hover{
-    background-color: white;
-    color: #000;
-}
-
-.button-reg {
-  font-family: 'Roboto', sans-serif;
-  background-color: white;
-  display: inline-block;
-  padding: 10px 15px;
-  color: #000;
-  cursor: pointer;
-  transition: 300ms;
-  border-radius: 25px;
-  border: 1.8px ,solid, black;
-  margin-left: 25px;
-  margin-top: 10px;
-  text-decoration : none;
-}
-
-.button-reg:hover{
-     background-color: rgb(52, 56, 61);
-     color: #fff;
-     border: 1.8px ,solid, white;
-}
+/**
   Нормализация блочной модели
  */
 *,
