--- a/front/header/header.css
+++ b/front/header/header.css
@@ -21,18 +21,21 @@ header{
     display: flex;
     flex-direction: row;
     position: sticky;
-    background-color: rgb (255, 255, 255);
+    background-color: rgb(52, 56, 61);
+    height: 95px;
     top: 0;
     left: 0;
     z-index: 999;
     width: 100%;
     color: #fff;
     justify-content: left;
+    box-shadow: 0px 0px 29px -11px rgba(34, 60, 80, 0.2);
+
 }
 
 img{
 margin-top: 15px;
-margin-left: 15px;
+margin-left: 60px;
 padding-right: 25px;
 height: 80px;
 width: 100px;
@@ -43,7 +46,7 @@ width: 100px;
     display: inline-block;
     text-align: left
     padding-left: 25px;
-    padding-right: 250px;
+    padding-right: 200px;
 }
 .btn{
     margin-left: 100px
