--- a/front/tg_bots/tg_bots.css
+++ b/front/tg_bots/tg_bots.css
@@ -14,3 +14,14 @@
     font-style: normal;
     font-display: swap;
 }
+
+
+
+.tg_bots{
+    background-color: #3D619B;
+}
+
+
+.tg_bots_name_position:{
+    font-family: 'Robotobold', sans-serif;
+    font-weight: 600;}
