--- a/front/tg_bots/tg_bots.css
+++ b/front/tg_bots/tg_bots.css
@@ -16,12 +16,61 @@
 }
 
 
-
 .tg_bots{
-    background-color: #3D619B;
+    display: flex;
+    display: inline-block;
+}
+
+
+.tg_bots_2{
+    display: flex;
+    display: inline-block;
+}
+
+
+
+.tg_bots_block{
+    background: #fff;
+
 }
 
 
 .tg_bots_name_position:{
     font-family: 'Robotobold', sans-serif;
     font-weight: 600;}
+
+.tg_bots_title h1{
+    margin-bottom: 100px;
+    margin-left: 320px;
+    padding-left: 320px;
+    text-align:justify;
+    font-size: 40px;
+}
+
+.tg_bots{
+    margin-left: 160px;
+
+}
+
+.tg_bots_block button{
+    font-family: 'Roboto', sans-serif;
+    background-color: white;
+    display: inline-block;
+    justify-content: center;
+    padding: 21.440px 15px;
+    font-size: 20px;
+    color: #000;
+    cursor: pointer;
+    transition: 300ms;
+    border-radius: 25px;
+    border: 1px ,solid, rgb(52, 56, 61);
+}
+
+.tg_bots_block button:hover{
+    background-color: rgb(52, 56, 61);
+    color: #fff;
+}
+.name tg_bots name_position {
+    margin-left: 160px;
+}
+
