--- a/front/about/about.css
+++ b/front/about/about.css
@@ -26,6 +26,12 @@
 .about h1{
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
+
+}
+
+.about h2{
+    font-size: 30px;
+
 }
 
 .about strong{
@@ -36,13 +42,18 @@
 .about p{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .about_h1{
     text-align:justify;
-    padding: 10px 105px;
+    padding: 20px 125px;
     font-size: 27px;
-    color: #fff
+    color: #fff;
+    margin-top: 16.5px;
+    margin-bottom: 16.5px;
 }
 
 .about{
@@ -50,8 +61,11 @@
 }
 .about h2{
     margin: 0px 0px
+    margin-bottom: 25px
+    margin-top: 25px
 }
 
 .about b{
     font-size: 20px
 }
+
