--- a/front/mine_bot/mine_bot.css
+++ b/front/mine_bot/mine_bot.css
@@ -3,8 +3,9 @@
     display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: #00ff00;
+	color: #fff;
 	width: 100%;
+	margin-left: 240px;
 }
 
 /* === Sign in Form === */
